<resources>
    <string name="app_name">LoveCaculator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="your_score">Your score</string>
    <string name="_100">100</string>
    <string name="result">Result</string>
    <string name="love_calculator">Love calculator</string>
    <string name="first_name">First name</string>
    <string name="second_name">Second name</string>
    <string name="calculate">Calculate</string>
    <string name="try_again">Try again</string>
    <string name="get_started">Get started</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="you">You</string>
    <string name="me">Me</string>
    <string name="history">History</string>
    <string name="home">Home</string>
</resources>